  - 성별과 직업을 방명록에서 신청서로 옮김
  - 봉사활동 시간대 변경
  - 중복된 활동가능시간을 최대 6명으로 설정

v0.1.3    Fri Aug 21 18:21:08 2015 KST
  - 관심활동은 한개만 입력가능
  - 캘린더에 활동내용을 등록

v0.1.2    Thu Aug 20 18:28:35 2015 KST
  - 안내문구수정
  - 신청서의 입력에 대해 실시간 유효성 검증

v0.1.1    Mon Aug 10 19:17:53 2015 KST
  - index 를 /works/new 로 redirect
  - 활동시간을 선택
  - thanks 문구
  - 1365 관련된 항목을 방명록에서 봉사활동으로 옮김
  - add route `PUT /works/:id/1365`
  - 캘린더에 활동내용을 등록하지 않음
  - 재능에 관한 컬럼 추가
  - 신청후에 접수에 관련된 SMS 를 보내지 않음

v0.1.0    Wed Aug 5 17:43:00 2015 +0900
  - init release