@@ -1,3 +1,4 @@
+  - `취소` 했을때 google calendar 에서도 삭제
   - 성별과 직업을 방명록에서 신청서로 옮김
   - 봉사활동 시간대 변경
   - 중복된 활동가능시간을 최대 6명으로 설정
